--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,6 +7,7 @@ $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       andes !default;
 $mdi-version:          "1.0.0" !default;
 
+/*
 $mdi-icons: (
      "rup-elementoderegistro": 61,
      "rup-semantic-dispositivos": 62,
@@ -17,3 +18,4 @@ $mdi-icons: (
      "rup-semantic-todos": 67,
      "rup-semantic-trastornos": 68,
 );
+*/
