--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,7 @@ $mdi-font-family:      "andesicons";
 $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
-$mdi-css-prefix:       andes !default;
+$mdi-css-prefix:       adi !default;
 $mdi-version:          "1.0.0" !default;
 
 /*
