--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -1,56 +1,56 @@
 $mdi-icons: (
-     "rup-cama": 61,
-     "rup-cama-bloqueada": 62,
-     "rup-calificador": 63,
-     "rup-cama-reparacion": 64,
-     "rup-cama-candado": 65,
-     "rup-check": 66,
-     "rup-cama-desocupada": 67,
-     "rup-cama-femenino": 68,
-     "rup-herramienta": 69,
-     "rup-cama-lapiz": 6a,
-     "rup-cama-ocupada": 6b,
-     "rup-oxigeno": 6c,
-     "rup-cama-pausada": 6d,
-     "rup-cama-reloj": 6e,
-     "rup-masculino": 6f,
-     "rup-maltrato": 70,
-     "rup-violencia-familiar": 71,
-     "rup-vacuna": 72,
-     "rup-logo": 73,
-     "rup-laboratorio": 74,
-     "rup-turno": 75,
-     "rup-agendas": 76,
-     "rup-marker": 77,
-     "rup-marker-salud": 78,
-     "rup-alerta": 79,
-     "rup-ambulancia": 7a,
-     "rup-mpi": 41,
-     "rup-bomberos": 42,
-     "rup-noticia": 43,
-     "rup-paciente": 44,
-     "rup-confirmar": 45,
-     "rup-defensa-civil": 46,
-     "rup-paciente-circulo": 47,
-     "rup-policia": 48,
-     "rup-farmacia": 49,
-     "rup-horario": 4a,
-     "rup-profesional": 4b,
-     "rup-profesional-circulo": 4c,
-     "rup-hospital": 4d,
-     "rup-huds": 4e,
-     "rup-telefono": 4f,
-     "rup-trastorno": 50,
-     "rup-semantics": 51,
-     "rup-producto": 52,
-     "rup-procedimiento": 53,
-     "rup-plan": 54,
-     "rup-hallazgo": 55,
-     "rup-dispositivo": 56,
-     "rup-elemento-registro": 57,
-     "rup-centro-salud": 58,
-     "rup-calendario-dia": 59,
-     "rup-calendario-rango": 5a,
-     "rup-llamar": 32,
-     "rup-maltrato-infantil": 33,
+     "cama": 61,
+     "cama-bloqueada": 62,
+     "calificador": 63,
+     "cama-reparacion": 64,
+     "cama-candado": 65,
+     "check": 66,
+     "cama-desocupada": 67,
+     "cama-femenino": 68,
+     "herramienta": 69,
+     "cama-lapiz": 6a,
+     "cama-ocupada": 6b,
+     "oxigeno": 6c,
+     "cama-pausada": 6d,
+     "cama-reloj": 6e,
+     "masculino": 6f,
+     "maltrato": 70,
+     "violencia-familiar": 71,
+     "vacuna": 72,
+     "logo": 73,
+     "laboratorio": 74,
+     "turno": 75,
+     "agendas": 76,
+     "marker": 77,
+     "marker-salud": 78,
+     "alerta": 79,
+     "ambulancia": 7a,
+     "mpi": 41,
+     "bomberos": 42,
+     "noticia": 43,
+     "paciente": 44,
+     "confirmar": 45,
+     "defensa-civil": 46,
+     "paciente-circulo": 47,
+     "policia": 48,
+     "farmacia": 49,
+     "horario": 4a,
+     "profesional": 4b,
+     "profesional-circulo": 4c,
+     "hospital": 4d,
+     "huds": 4e,
+     "telefono": 4f,
+     "trastorno": 50,
+     "semantics": 51,
+     "producto": 52,
+     "procedimiento": 53,
+     "plan": 54,
+     "hallazgo": 55,
+     "dispositivo": 56,
+     "elemento-registro": 57,
+     "centro-salud": 58,
+     "calendario-dia": 59,
+     "calendario-rango": 5a,
+     "llamar": 32,
+     "maltrato-infantil": 33,
 );
